--- a/app/pages/spare-parts.html
+++ b/app/pages/spare-parts.html
@@ -34,117 +34,30 @@
                     Фильтры
                 </div>
             </div>
-            <div class="spare-parts-page__wrapper">
-                <div class="spare-parts-page__title spare-title-category">
-                    <div class="spare-title-category__name">Название запчасти</div>
-                    <div class="spare-title-category__category">Параметр 1</div>
-                    <div class="spare-title-category__category">Параметр 2</div>
-                    <div class="spare-title-category__category">Параметр 3</div>
-                    <div class="spare-title-category__category">Параметр 4</div>
-                </div>
-                <div class="spare-parts-page__line">
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
+            <table cellspacing="0" cellpadding="0" class="spare-parts-page__wrapper">
+                <tr align="center">
+                    <th class="spare-title-category__category">Название запчасти</th>
+                    <th class="spare-title-category__category">Параметр 1</th>
+                    <th class="spare-title-category__category">Параметр 2</th>
+                    <th class="spare-title-category__category">Параметр 3</th>
+                    <th class="spare-title-category__category">Параметр 4</th>
+                </tr>
+                <tr align="center">
+                    <td class="spare-parts-page__card-name">
                         <div class="card-name-spare__img">
                             <img src="../img/spare_frame/01.png" alt="">
                         </div>
                         <div class="card-name-spare__text">Название товара</div>
-                    </div>
+                    </td>
 
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
-                <div class="spare-parts-page__line">
-
-                </div>
-                <div class="spare-parts-page__list">
-                    <div class="spare-parts-page__card-name card-name-spare">
-                        <div class="card-name-spare__img">
-                            <img src="../img/spare_frame/01.png" alt="">
-                        </div>
-                        <div class="card-name-spare__text">Название товара</div>
-                    </div>
-                    <div class="spare-parts-page__category--active">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                    <div class="spare-parts-page__category">Lorem</div>
-                </div>
+                    <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
+                    <td class="spare-parts-page__category">Lorem</td>
+                    <td class="spare-parts-page__category">Lorem</td>
+                    <td class="spare-parts-page__category">Lorem</td>
+                </tr>
+            </table>
+            <div class="spare-parts-page__wrapper_mobile">
+                @@include('../components/spare-parts/spare-card.html')
             </div>
         </div>
     </main>
