--- a/app/news.html
+++ b/app/news.html
@@ -137,283 +137,51 @@
     })
 </script>
     <main class="main">
-        <div id="popupIndex" class="popup">
-    <div class="popup__back"></div>
-    <div class="popup__base">
-        <div class="popup__cross">
-            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 1L22 22" stroke="white" stroke-width="2.37736"/>
-                <path d="M22 1L1 22" stroke="white" stroke-width="2.37736"/>
-            </svg>
+        <div class="news__img-block">
+    <section class="news-application page-padding">
+        <div class="news-application__title">
+            Название данной новости
         </div>
-        <div class="popup__items">
-            <div class="popup__item">
-                <label for="inputName">Ваше имя</label>
-                <input id="inputName" class="popup__input" placeholder="Введите ваше имя" />
-            </div>
-            <div class="popup__item">
-                <label for="inputEmail">E-mail</label>
-                <input id="inputEmail" class="popup__input" placeholder="Введите ваш e-mail" />
-            </div>
-            <div class="popup__item">
-                <label for="inputPhone">Ваш телефон</label>
-                <input id="inputPhone" class="popup__input" placeholder="Введите ваш телефон" />
-            </div>
-            <div class="popup__item">
-                <button class="popup__send">
-                    Оставить заявку
-                </button>
-            </div>
-            <div class="popup__item">
-                <p class="popup__helper-text">
-                    Нажимая на кнопку, Вы принимаете Положение и Согласие на обработку персональных данных
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.getElementsByClassName('popup__button')[0].addEventListener('click', () => {
-            document.getElementById('popupIndex').classList.add('open')
-            document.getElementsByClassName('popup')[0].style.zIndex = '101'
-        })
-
-        document.getElementsByClassName('popup__back')[0].addEventListener('click', () => {
-            document.getElementById('popupIndex').classList.remove('open')
-            document.getElementsByClassName('popup')[0].style.zIndex = '-1'
-        })
-
-        document.getElementsByClassName('popup__cross')[0].addEventListener('click', () => {
-            document.getElementById('popupIndex').classList.remove('open')
-            document.getElementsByClassName('popup')[0].style.zIndex = '-1'
-        })
-    })
-</script>
-        <div class="main__img">
-    <section class="main-application page-padding">
-        <div class="main-application__title">ОФИЦИАЛЬНЫЙ
-            ДИЛЕР TECNIWELL
-            НА ТЕРРИТОРИИ
-            РОССИИ И СТРАН СНГ
-        </div>
-        <div class="main-application__text">Мировой лидер в разработке и производстве оборудования для
-            струйной цементации, цементации и смесительных установок
-        </div>
-        <a class="main-application__button popup__button">Оставить заявку</a>
-    </section>
-    <section class="main-experience">
-        <div class="main-experience__inner page-padding">
-            <div class="main-experience__left">
-                <div class="main-experience__title">
-                    <div class="main-experience__numbers">20 лет</div>
-                    <div class="main-experience__plus">
-                        +
-                    </div>
-                </div>
-                <div class="main-experience__sub-title">
-                    Компания на рынке
-                </div>
-            </div>
-            <div class="main-experience__right">
-                <div class="main-experience__text">Наша компания находится на рынке более 20 лет. Мы
-                    единственный
-                    официальный дилер в РФ и СНГ. Наша компания качественно
-                    выполняет любые поставленные задачи и предоставляет гибкие
-                    условия для постоянных клиентов.
-                </div>
-            </div>
+        <div class="main-application__text">
+            Мировой лидер в разработке и производстве оборудования для струйной цементации, цементации и смесительных
+            установок
         </div>
     </section>
 </div>
-        <div id="about">
-            <section class="card-list page-padding">
-    <div class="card-list__item item">
-        <div class="item__up">
-            <div class="item__logo">
-                <svg width="78" height="93" viewBox="0 0 78 93" fill="none"
+        <section class="news-info page-padding">
+    <div class="news-info__top">
+        <h2>
+            Подзаголовок о новости
+        </h2>
+
+        <a href="/" class="news-info__top_back">
+            <div style="display:flex; align-items: center">
+                <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                      xmlns="http://www.w3.org/2000/svg">
-                    <path d="M68.9787 10.8828L43.7703 1.44111C41.1578 0.478613 36.8953 0.478613 34.2828 1.44111L9.07441 10.8828C4.21608 12.7161 0.274414 18.3994 0.274414 23.5786V60.7034C0.274414 64.4159 2.70358 69.3201 5.68275 71.5201L30.8912 90.3576C35.337 93.7034 42.6245 93.7034 47.0703 90.3576L72.2787 71.5201C75.2578 69.2743 77.687 64.4159 77.687 60.7034V23.5786C77.7328 18.3994 73.7912 12.7161 68.9787 10.8828ZM54.9537 36.5494L35.2453 56.2576C34.5578 56.9451 33.687 57.2659 32.8162 57.2659C31.9453 57.2659 31.0745 56.9451 30.387 56.2576L23.0536 48.8326C21.7244 47.5034 21.7244 45.3034 23.0536 43.9743C24.3827 42.6451 26.5827 42.6451 27.9119 43.9743L32.862 48.9243L50.1412 31.6453C51.4703 30.3161 53.6703 30.3161 54.9995 31.6453C56.3287 32.9744 56.3287 35.2203 54.9537 36.5494Z"
-                          fill="white"/>
+                    <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
+                          fill="#D82329"/>
+                    <rect x="34" y="9.8916" width="18" height="2.03094"
+                          transform="rotate(-180 34 9.8916)" fill="#D82329"/>
                 </svg>
             </div>
-            <div class="item__number">
-                1
-            </div>
-        </div>
-        <div class="item__bottom">
-            <div class="item__title">
-                Надежность
-            </div>
-            <div class="item__text">
-                Единственный официальный
-                дилер Tecniwell на территории
-                РФ и стран СНГ
-            </div>
-        </div>
-    </div>
-
-    <div class="card-list__item item">
-        <div class="item__up">
-            <div class="item__logo">
-                <svg width="92" height="100" viewBox="0 0 92 100" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M90.8213 59.3478L78.8985 41.6358V40.1598C78.8987 29.7577 74.7811 19.7785 67.4457 12.4032C60.1103 5.02786 50.1537 0.856154 39.7517 0.799809C36.6154 0.77668 33.4894 1.1626 30.4529 1.94781C21.9077 4.03939 14.3151 8.94605 8.89775 15.8777C3.48039 22.8093 0.553538 31.3624 0.588523 40.1598C0.359942 47.5407 2.40991 54.8129 6.45972 60.9878C13.3149 70.8278 17.9397 78.6998 15.1025 89.3598C14.7667 90.5411 14.7256 91.7867 14.983 92.9876C15.2403 94.1884 15.7881 95.3078 16.5785 96.2478C17.2726 97.1893 18.1837 97.9494 19.2344 98.4633C20.2851 98.9773 21.4444 99.2299 22.6137 99.1998H54.7577C56.5574 99.2114 58.3049 98.5956 59.6997 97.4582C61.0945 96.3209 62.0494 94.733 62.4001 92.9678C62.5891 92.3276 62.6993 91.6667 62.7281 90.9998C62.8746 90.0717 63.3524 89.228 64.073 88.625C64.7936 88.022 65.7083 87.7004 66.6477 87.7198H68.9601C70.6768 87.7735 72.3625 87.2548 73.752 86.2454C75.1415 85.2359 76.1559 83.793 76.6353 82.1438C78.0607 77.0095 78.8754 71.725 79.0625 66.3998H87.5413C88.3142 66.3055 89.0501 66.0149 89.6788 65.5555C90.3076 65.0962 90.8081 64.4835 91.1329 63.7758C91.4506 63.0694 91.5885 62.2953 91.5341 61.5226C91.4797 60.7499 91.2348 60.0028 90.8213 59.3478ZM58.2837 45.621L56.6437 48.1958C56.3163 48.6602 55.8847 49.0415 55.3835 49.3092C54.8823 49.5769 54.3254 49.7235 53.7573 49.7374C53.3525 49.7118 52.9541 49.6233 52.5765 49.475L48.2305 47.835C46.3765 49.4312 44.2329 50.656 41.9165 51.443L41.1293 56.2154C40.9931 56.9825 40.5882 57.6761 39.9872 58.1719C39.3862 58.6677 38.6283 58.9334 37.8493 58.9214H34.5693C33.7903 58.9334 33.0324 58.6677 32.4314 58.1719C31.8304 57.6761 31.4256 56.9825 31.2893 56.2154L30.5021 51.443C28.2756 50.7901 26.213 49.6721 24.4505 48.163L19.8421 49.803C19.4646 49.9513 19.0662 50.0398 18.6613 50.0654C18.081 50.0574 17.5121 49.9029 17.0075 49.6161C16.5029 49.3294 16.0789 48.9198 15.7749 48.4254L14.1349 45.7194C13.7452 45.0543 13.6102 44.2704 13.755 43.5133C13.8998 42.7562 14.3145 42.0774 14.9221 41.603L18.7433 38.5034C18.4899 37.3616 18.3579 36.1962 18.3497 35.0266C18.3632 33.9223 18.4951 32.8227 18.7433 31.7466L15.0041 28.483C14.3906 28.013 13.9714 27.3339 13.8262 26.5748C13.6811 25.8157 13.8201 25.0298 14.2169 24.3666L15.8569 21.6606C16.1487 21.1552 16.5699 20.7368 17.0773 20.4485C17.5847 20.1602 18.1598 20.0125 18.7433 20.0206C19.1482 20.0462 19.5465 20.1347 19.9241 20.283L24.5325 21.923C26.3163 20.3983 28.3685 19.2193 30.5841 18.4462L31.2401 13.9198C31.3755 13.1629 31.7846 12.4821 32.3894 12.0073C32.9943 11.5325 33.7527 11.2968 34.5201 11.345H37.8001C38.5482 11.2951 39.2896 11.5138 39.8909 11.9617C40.4922 12.4097 40.9139 13.0575 41.0801 13.7886L41.8673 18.4298C44.0715 19.136 46.124 20.2485 47.9189 21.7098L52.5273 20.0698C52.9049 19.9215 53.3033 19.833 53.7081 19.8074C54.2885 19.8154 54.8573 19.97 55.362 20.2567C55.8666 20.5434 56.2906 20.953 56.5945 21.4474L58.2345 24.1534C58.63 24.8282 58.7713 25.6222 58.633 26.392C58.4947 27.1618 58.0858 27.8569 57.4801 28.3518L53.6589 31.4514C53.9194 32.592 54.0515 33.7582 54.0525 34.9282C54.0391 36.0325 53.9071 37.1321 53.6589 38.2082L57.4801 41.3734C58.1062 41.8637 58.5329 42.5647 58.6807 43.3461C58.8285 44.1274 58.6874 44.9359 58.2837 45.621Z"
-                          fill="white"/>
-                </svg>
-            </div>
-            <div class="item__number">
-                2
-            </div>
-        </div>
-        <div class="item__bottom">
-            <div class="item__title">
-                Опыт
-            </div>
-            <div class="item__text">
-                Более 20 лет на рынке
-            </div>
-        </div>
-    </div>
-
-    <div class="card-list__item item">
-        <div class="item__up">
-            <div class="item__logo">
-                <svg width="105" height="99" viewBox="0 0 105 99" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M104.511 80.0015L86.9744 49.6251C86.5023 48.8075 85.3214 48.8362 84.8766 49.6688C79.7915 59.1875 70.8942 65.8226 60.6567 68.1371C59.8723 68.3145 59.4878 69.2049 59.8897 69.9014L75.4197 96.8C76.9528 99.4555 80.8829 99.0864 81.9126 96.2172L86.7295 82.7967L100.76 85.3335C103.764 85.8761 106.039 82.6468 104.511 80.0015Z"
-                          fill="white"/>
-                    <path d="M44.3433 68.1377C34.1023 65.8222 25.2063 59.1836 20.1234 49.6694C19.6786 48.8366 18.4978 48.8081 18.0257 49.6255L0.488458 80.0018C-1.03753 82.6449 1.2333 85.8767 4.23912 85.3339L18.2699 82.7971L23.0868 96.2175C24.1165 99.0858 28.0464 99.4565 29.5798 96.8004L45.1097 69.9018C45.512 69.2051 45.1277 68.3149 44.3433 68.1377Z"
-                          fill="white"/>
-                    <path d="M82.1991 44.0776C86.0907 34.2484 84.8582 23.1482 78.9021 14.3844C66.2326 -4.25863 38.7645 -4.25351 26.0993 14.3825C20.1422 23.1482 18.9087 34.2488 22.8 44.0776C33.4575 70.9901 71.5921 70.8642 82.1991 44.0776ZM70.0524 31.5213L63.8824 37.5352L65.3389 46.0272C65.8454 48.981 62.734 51.1868 60.1258 49.8148L52.4996 45.8056L44.8732 49.815C42.243 51.1979 39.1574 48.9584 39.6601 46.0275L41.1165 37.5354L34.9466 31.5215C32.8187 29.4469 33.9952 25.8207 36.9377 25.3933L45.4642 24.1543L49.2772 16.428C50.5924 13.7628 54.405 13.7613 55.7209 16.428L59.534 24.1543L68.0605 25.3933C71.0019 25.8203 72.1815 29.4457 70.0524 31.5213Z"
-                          fill="white"/>
-                </svg>
-            </div>
-            <div class="item__number">
-                3
-            </div>
-        </div>
-        <div class="item__bottom">
-            <div class="item__title">
-                Качество
-            </div>
-            <div class="item__text">
-                Грамотное выполнение
-                поставленных задач, гибкие
-                условия для клиентов
-            </div>
-        </div>
-    </div>
-</section>
-<section id="@@idScroll" class="main-about page-padding">
-    <div class="main-about__doc">
-        <img src="img/about/01.png" alt="">
-    </div>
-    <div class="main-about__info">
-        <div class="main-about__title">О компании</div>
-        <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
-        <div class="main-about__text">
-            <span>
-                Осуществляем поставку оборудования, запасных частей и расходных материалов итальянского производителя TECNIWELL, в Россию, Африку, Европу и страны СНГ. <br><br>
-                Консультируем и подбираем оборудование, согласно поставленным задачам.<br><br>
-                Доставляем технику и расходные материалы до пункта назначения, не обременяя Клиента логистическими и таможенными формальностями.<br><br>
-                Сопровождаем оборудование в пост продажном обслуживании
-            </span>
-        </div>
-    </div>
-</section>
-
-        </div>
-        <section class="main-help">
-    <div class="main-help__container2 page-padding">
-        <div class="main-help__info">
-            <div class="main-help__title">Помощь заказчикам
-                в реализации строительных
-                задач разного уровня сложности
-            </div>
-            <div class="main-help__text">В том числе, связанных с укреплением, цементацией
-                грунта и бурением с использованием инновационного
-                высококвалифицированного оборудования.
-            </div>
-        </div>
-        <a href="" class="main-help__img">
-            <img src="img/help/01.png" alt="">
+            <p>Вернуться на главную</p>
         </a>
     </div>
-
+    <div class="news-info__content">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto asperiores corporis, delectus dicta
+            dolores, excepturi expedita ipsum laboriosam mollitia nam placeat possimus praesentium quas quidem
+            reprehenderit ullam ut voluptatem?
+        </p>
+        <img src="img/news/test.png" alt="test">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur doloribus eius
+            enim eveniet facilis libero magni modi molestiae odit pariatur quia, quis quisquam quod similique sit
+            tempore tenetur!
+        </p>
+    </div>
 </section>
-        <section class="main-category page-padding__left">
-    <div class="main-category__top page-padding__right">
-        <h3>Категории товаров</h3>
-        <a>Перейти в каталог категорий</a>
-    </div>
-    <div class="main-category__card-helper__wrapper">
-        <div class="main-category__card-helper">
-            <div class="main-category__card-opacity"></div>
-            <div class="main-category__card-list">
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
 
-            </div>
-        </div>
-    </div>
-    <a class="main-category__button">Перейти в каталог категорий</a>
-</section>
-        <section class="main-spare page-padding">
-  <div class="main-spare__container">
-    <img class="main-spare__img_back" src="img/spare/01.png" alt="">
-    <div class="main-spare__img">
-      <img src="img/spare/01.png" alt="">
-    </div>
-    <div class="main-spare__info">
-      <div class="main-spare__title">Запасные части <br>
-        и расходные<br>
-        материалы
-      </div>
-      <div class="main-spare__text">Буровые технологии» представляет Вашему<br>
-        вниманию каталог запасных частей и расходных<br>
-        материалов, доступных к заказу
-      </div>
-      <a class="main-spare__button" href="">Перейти в каталог запчастей</a>
-
-    </div>
-  </div>
-</section>
         <section class="main-about-big page-padding__left">
     <div class="main-about-big__title">
         Больше о компании
